# aya-xdp-dispatcher-test

./: Cargo.toml  README.md
dispatcher-test/: Cargo.toml
dispatcher-test-common/: Cargo.toml
dispatcher-test-ebpf/: Cargo.toml
dispatcher-test-ebpf/src/: main.rs  pass.rs
dispatcher-test/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
